[gd_scene load_steps=9 format=3 uid="uid://dffusuj1mg48w"]

[ext_resource type="Texture2D" uid="uid://ux6u0ocdyfmb" path="res://addons/quest_manager/assets/SpriteSheet.png" id="1_h2u44"]
[ext_resource type="Script" path="res://addons/quest_manager/Examples/ExampleOne/Spawner.gd" id="2_178tv"]
[ext_resource type="PackedScene" uid="uid://dkgxjm5uka6l7" path="res://addons/quest_manager/Examples/ExampleOne/Player.tscn" id="2_wt15h"]
[ext_resource type="PackedScene" path="res://addons/quest_manager/Examples/ExampleOne/Enemy.tscn" id="2_xic0p"]
[ext_resource type="Script" path="res://addons/quest_manager/Examples/ExampleOne/UI.gd" id="5_dd25g"]
[ext_resource type="Resource" uid="uid://xpnw6ggixm3w" path="res://addons/quest_manager/Examples/ExampleQuest.quest" id="6_cnepv"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xsckt"]
texture = ExtResource("1_h2u44")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
9:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
8:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
7:2/0 = 0
9:2/0 = 0
10:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
6:3/0 = 0
7:3/0 = 0
9:3/0 = 0
10:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
9:4/0 = 0
10:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
11:5/0 = 0
12:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
7:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
1:8/0 = 0
2:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
1:9/0 = 0
2:9/0 = 0
11:9/0 = 0
12:9/0 = 0
0:10/0 = 0
2:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
5:11/0 = 0
15:11/0 = 0
0:12/0 = 0
15:12/0 = 0
11:13/animation_columns = 4
11:13/animation_speed = 5.0
11:13/animation_frame_0/duration = 1.0
11:13/animation_frame_1/duration = 1.0
11:13/animation_frame_2/duration = 1.0
11:13/animation_frame_3/duration = 1.0
11:13/0 = 0
15:13/0 = 0
15:14/0 = 0

[sub_resource type="TileSet" id="TileSet_d1k3s"]
tile_size = Vector2i(32, 32)
sources/1 = SubResource("TileSetAtlasSource_xsckt")

[node name="SpaceArcade" type="Node2D"]
position = Vector2(-13, 0)

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_d1k3s")
cell_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0, 1441830, 1, 0, -65538, 1, 0, 1048586, 1, 0, 983050, 1, 0, 917514, 1, 0, 851978, 1, 0, 786442, 1, 0, 720906, 1, 0, 655370, 1, 0, 589834, 1, 0, 524298, 1, 0, 458762, 1, 0, 393226, 1, 0, 327690, 1, 0, 262154, 1, 0, 196618, 1, 0, 131082, 1, 0, 65546, 1, 0, 10, 1, 0, -65526, 1, 0, -131062, 1, 0, -131063, 1, 0, -131064, 1, 0, -131065, 1, 0, -131066, 1, 0, -131067, 1, 0, -131068, 1, 0, -131069, 1, 0, -131070, 1, 0, -131071, 1, 0, -131072, 1, 0, -65537, 1, 0, -1, 1, 0, -2, 1, 0, 65534, 1, 0, 131070, 1, 0, 196606, 1, 0, 262142, 1, 0, 327678, 1, 0, 393214, 1, 0, 458750, 1, 0, 524286, 1, 0, 589822, 1, 0, 655358, 1, 0, 720894, 1, 0, 786430, 1, 0, 851966, 1, 0, 917502, 1, 0, 983038, 1, 0, 1048574, 1, 0, 1114110, 1, 0, 1179646, 1, 0, 1245182, 1, 0, 1310718, 1, 0, 1376254, 1, 0, 1441790, 1, 0, 1507326, 1, 0, 1507327, 1, 0, 1441791, 1, 0, 1376255, 1, 0, 1310719, 1, 0, 1245183, 1, 0, 1179647, 1, 0, 1114111, 1, 0, 1048575, 1, 0, 983039, 1, 0, 917503, 1, 0, 851967, 1, 0, 786431, 1, 0, 720895, 1, 0, 655359, 1, 0, 589823, 1, 0, 524287, 1, 0, 458751, 1, 0, 393215, 1, 0, 327679, 1, 0, 262143, 1, 0, 196607, 1, 0, 131071, 1, 0, 65535, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 1, 0, 655360, 1, 0, 720896, 1, 0, 786432, 1, 0, 851968, 1, 0, 917504, 1, 0, 983040, 1, 0, 1048576, 1, 0, 1114112, 1, 0, 1179648, 1, 0, 1245184, 1, 0, 1310720, 1, 0, 1376256, 1, 0, 1441792, 1, 0, 1441793, 1, 0, 1376257, 1, 0, 1310721, 1, 0, 1245185, 1, 0, 1179649, 1, 0, 1114113, 1, 0, 1048577, 1, 0, 983041, 1, 0, 917505, 1, 0, 851969, 1, 0, 786433, 1, 0, 720897, 1, 0, 655361, 1, 0, 589825, 1, 0, 524289, 1, 0, 458753, 1, 0, 393217, 1, 0, 327681, 1, 0, 262145, 1, 0, 196609, 1, 0, 131073, 1, 0, 65537, 1, 0, 1, 1, 0, -65535, 1, 0, -65536, 1, 0, -65534, 1, 0, 2, 1, 0, 65538, 1, 0, 131074, 1, 0, 196610, 1, 0, 262146, 1, 0, 327682, 1, 0, 393218, 1, 0, 458754, 1, 0, 524290, 1, 0, 589826, 1, 0, 655362, 1, 0, 720898, 1, 0, 786434, 1, 0, 851970, 1, 0, 917506, 1, 0, 983042, 1, 0, 1048578, 1, 0, 1114114, 1, 0, 1179650, 1, 0, 1245186, 1, 0, 1310722, 1, 0, 1376258, 1, 0, 1441794, 1, 0, 1441795, 1, 0, 1376259, 1, 0, 1310723, 1, 0, 1245187, 1, 0, 1179651, 1, 0, 1114115, 1, 0, 1048579, 1, 0, 983043, 1, 0, 917507, 1, 0, 851971, 1, 0, 786435, 1, 0, 720899, 1, 0, 655363, 1, 0, 589827, 1, 0, 524291, 1, 0, 458755, 1, 0, 393219, 1, 0, 327683, 1, 0, 262147, 1, 0, 196611, 1, 0, 131075, 1, 0, 65539, 1, 0, 3, 1, 0, -65533, 1, 0, -65532, 1, 0, 4, 1, 0, 65540, 1, 0, 131076, 1, 0, 196612, 1, 0, 262148, 1, 0, 327684, 1, 0, 393220, 1, 0, 458756, 1, 0, 524292, 1, 0, 589828, 1, 0, 655364, 1, 0, 720900, 1, 0, 786436, 1, 0, 851972, 1, 0, 917508, 1, 0, 983044, 1, 0, 1048580, 1, 0, 1114116, 1, 0, 1179652, 1, 0, 1245188, 1, 0, 1310724, 1, 0, 1376260, 1, 0, 1441796, 1, 0, 1441797, 1, 0, 1376261, 1, 0, 1310725, 1, 0, 1245189, 1, 0, 1179653, 1, 0, 1114117, 1, 0, 1048581, 1, 0, 983045, 1, 0, 917509, 1, 0, 851973, 1, 0, 786437, 1, 0, 720901, 1, 0, 655365, 1, 0, 589829, 1, 0, 524293, 1, 0, 458757, 1, 0, 393221, 1, 0, 327685, 1, 0, 262149, 1, 0, 196613, 1, 0, 131077, 1, 0, 65541, 1, 0, 5, 1, 0, -65531, 1, 0, -65530, 1, 0, 6, 1, 0, 65542, 1, 0, 131078, 1, 0, 196614, 1, 0, 262150, 1, 0, 327686, 1, 0, 393222, 1, 0, 458758, 1, 0, 524294, 1, 0, 589830, 1, 0, 655366, 1, 0, 720902, 1, 0, 786438, 1, 0, 851974, 1, 0, 917510, 1, 0, 983046, 1, 0, 1048582, 1, 0, 1114118, 1, 0, 1179654, 1, 0, 1245190, 1, 0, 1310726, 1, 0, 1376262, 1, 0, 1441798, 1, 0, 1441799, 1, 0, 1376263, 1, 0, 1310727, 1, 0, 1245191, 1, 0, 1179655, 1, 0, 1114119, 1, 0, 1048583, 1, 0, 983047, 1, 0, 917511, 1, 0, 851975, 1, 0, 786439, 1, 0, 720903, 1, 0, 655367, 1, 0, 589831, 1, 0, 524295, 1, 0, 458759, 1, 0, 393223, 1, 0, 327687, 1, 0, 262151, 1, 0, 196615, 1, 0, 131079, 1, 0, 65543, 1, 0, 7, 1, 0, -65529, 1, 0, -65528, 1, 0, 8, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 327688, 1, 0, 393224, 1, 0, 458760, 1, 0, 524296, 1, 0, 589832, 1, 0, 655368, 1, 0, 720904, 1, 0, 786440, 1, 0, 851976, 1, 0, 917512, 1, 0, 983048, 1, 0, 1048584, 1, 0, 1114120, 1, 0, 1179656, 1, 0, 1245192, 1, 0, 1310728, 1, 0, 1376264, 1, 0, 1441800, 1, 0, 1441801, 1, 0, 1376265, 1, 0, 1310729, 1, 0, 1245193, 1, 0, 1179657, 1, 0, 1114121, 1, 0, 1048585, 1, 0, 983049, 1, 0, 917513, 1, 0, 851977, 1, 0, 786441, 1, 0, 720905, 1, 0, 655369, 1, 0, 589833, 1, 0, 524297, 1, 0, 458761, 1, 0, 393225, 1, 0, 327689, 1, 0, 262153, 1, 0, 196617, 1, 0, 131081, 1, 0, 65545, 1, 0, 9, 1, 0, -65527, 1, 0, 1114122, 1, 0, 1179658, 1, 0, 1245194, 1, 0, 1310730, 1, 0, 1376266, 1, 0, 1441802, 1, 0, 1441803, 720897, 13, 1376267, 720897, 13, 1310731, 720897, 13, 1245195, 720897, 13, 1179659, 720897, 13, 1114123, 720897, 13, 1048587, 720897, 13, 983051, 720897, 13, 917515, 720897, 13, 851979, 720897, 13, 786443, 720897, 13, 720907, 720897, 13, 655371, 720897, 13, 589835, 720897, 13, 524299, 720897, 13, 458763, 720897, 13, 393227, 720897, 13, 327691, 720897, 13, 262155, 720897, 13, 196619, 720897, 13, 131083, 720897, 13, 65547, 720897, 13, 11, 720897, 13, -65525, 720897, 13, -131061, 720897, 13, -131060, 720897, 13, -65524, 720897, 13, 12, 720897, 13, 65548, 720897, 13, 131084, 720897, 13, 196620, 720897, 13, 262156, 720897, 13, 327692, 720897, 13, 393228, 720897, 13, 458764, 720897, 13, 524300, 720897, 13, 589836, 720897, 13, 655372, 720897, 13, 720908, 720897, 13, 786444, 720897, 13, 851980, 720897, 13, 917516, 720897, 13, 983052, 720897, 13, 1048588, 720897, 13, 1114124, 720897, 13, 1179660, 720897, 13, 1245196, 720897, 13, 1310732, 720897, 13, 1376268, 720897, 13, 1441804, 720897, 13, 1441805, 720897, 13, 1376269, 720897, 13, 1310733, 720897, 13, 1245197, 720897, 13, 1179661, 720897, 13, 1114125, 720897, 13, 1048589, 720897, 13, 983053, 720897, 13, 917517, 720897, 13, 851981, 720897, 13, 786445, 720897, 13, 720909, 720897, 13, 655373, 720897, 13, 589837, 720897, 13, 524301, 720897, 13, 458765, 720897, 13, 393229, 720897, 13, 327693, 720897, 13, 262157, 720897, 13, 196621, 720897, 13, 131085, 720897, 13, 65549, 720897, 13, 13, 720897, 13, -65523, 720897, 13, -131059, 720897, 13, -131058, 720897, 13, -65522, 720897, 13, 14, 720897, 13, 65550, 720897, 13, 131086, 720897, 13, 196622, 720897, 13, 262158, 720897, 13, 327694, 720897, 13, 393230, 720897, 13, 458766, 720897, 13, 524302, 720897, 13, 589838, 720897, 13, 655374, 720897, 13, 720910, 720897, 13, 786446, 720897, 13, 851982, 720897, 13, 917518, 720897, 13, 983054, 720897, 13, 1048590, 720897, 13, 1114126, 720897, 13, 1179662, 720897, 13, 1245198, 720897, 13, 1310734, 720897, 13, 1376270, 720897, 13, 1441806, 720897, 13, 1441807, 720897, 13, 1376271, 720897, 13, 1310735, 720897, 13, 1245199, 720897, 13, 1179663, 720897, 13, 1114127, 720897, 13, 1048591, 720897, 13, 983055, 720897, 13, 917519, 720897, 13, 851983, 720897, 13, 786447, 720897, 13, 720911, 720897, 13, 655375, 720897, 13, 589839, 720897, 13, 524303, 720897, 13, 458767, 720897, 13, 393231, 720897, 13, 327695, 720897, 13, 262159, 720897, 13, 196623, 720897, 13, 131087, 720897, 13, 65551, 720897, 13, 15, 720897, 13, -65521, 720897, 13, -131057, 720897, 13, -131056, 720897, 13, -65520, 720897, 13, 16, 720897, 13, 65552, 720897, 13, 131088, 720897, 13, 196624, 720897, 13, 262160, 720897, 13, 327696, 720897, 13, 393232, 720897, 13, 458768, 720897, 13, 524304, 720897, 13, 589840, 720897, 13, 655376, 720897, 13, 720912, 720897, 13, 786448, 720897, 13, 851984, 720897, 13, 917520, 720897, 13, 983056, 720897, 13, 1048592, 720897, 13, 1114128, 720897, 13, 1179664, 720897, 13, 1245200, 720897, 13, 1310736, 720897, 13, 1376272, 720897, 13, 1441808, 720897, 13, 1441809, 720897, 13, 1376273, 720897, 13, 1310737, 720897, 13, 1245201, 720897, 13, 1179665, 720897, 13, 1114129, 720897, 13, 1048593, 720897, 13, 983057, 720897, 13, 917521, 720897, 13, 851985, 720897, 13, 786449, 720897, 13, 720913, 720897, 13, 655377, 720897, 13, 589841, 720897, 13, 524305, 720897, 13, 458769, 720897, 13, 393233, 720897, 13, 327697, 720897, 13, 262161, 720897, 13, 196625, 720897, 13, 131089, 720897, 13, 65553, 720897, 13, 17, 720897, 13, -65519, 720897, 13, -131055, 720897, 13, -131054, 720897, 13, -65518, 720897, 13, 18, 720897, 13, 65554, 720897, 13, 131090, 720897, 13, 196626, 720897, 13, 262162, 720897, 13, 327698, 720897, 13, 393234, 720897, 13, 458770, 720897, 13, 524306, 720897, 13, 589842, 720897, 13, 655378, 720897, 13, 720914, 720897, 13, 786450, 720897, 13, 851986, 720897, 13, 917522, 720897, 13, 983058, 720897, 13, 1048594, 720897, 13, 1114130, 720897, 13, 1179666, 720897, 13, 1245202, 720897, 13, 1310738, 720897, 13, 1376274, 720897, 13, 1441810, 720897, 13, 1441811, 720897, 13, 1376275, 720897, 13, 1310739, 720897, 13, 1245203, 720897, 13, 1179667, 720897, 13, 1114131, 720897, 13, 1048595, 720897, 13, 983059, 720897, 13, 917523, 720897, 13, 851987, 720897, 13, 786451, 720897, 13, 720915, 720897, 13, 655379, 720897, 13, 589843, 720897, 13, 524307, 720897, 13, 458771, 720897, 13, 393235, 720897, 13, 327699, 720897, 13, 262163, 720897, 13, 196627, 720897, 13, 131091, 720897, 13, 65555, 720897, 13, 19, 720897, 13, -65517, 720897, 13, -131053, 720897, 13, -131052, 720897, 13, -65516, 720897, 13, 20, 720897, 13, 65556, 720897, 13, 131092, 720897, 13, 196628, 720897, 13, 262164, 720897, 13, 327700, 720897, 13, 393236, 720897, 13, 458772, 720897, 13, 524308, 720897, 13, 589844, 720897, 13, 655380, 720897, 13, 720916, 720897, 13, 786452, 720897, 13, 851988, 720897, 13, 917524, 720897, 13, 983060, 720897, 13, 1048596, 720897, 13, 1114132, 720897, 13, 1179668, 720897, 13, 1245204, 720897, 13, 1310740, 720897, 13, 1376276, 720897, 13, 1441812, 720897, 13, 1441813, 720897, 13, 1376277, 720897, 13, 1310741, 720897, 13, 1245205, 720897, 13, 1179669, 720897, 13, 1114133, 720897, 13, 1048597, 720897, 13, 983061, 720897, 13, 917525, 720897, 13, 851989, 720897, 13, 786453, 720897, 13, 720917, 720897, 13, 655381, 720897, 13, 589845, 720897, 13, 524309, 720897, 13, 458773, 720897, 13, 393237, 720897, 13, 327701, 720897, 13, 262165, 720897, 13, 196629, 720897, 13, 131093, 720897, 13, 65557, 720897, 13, 21, 720897, 13, -65515, 720897, 13, -131051, 720897, 13, -131050, 720897, 13, -65514, 720897, 13, 22, 720897, 13, 65558, 720897, 13, 131094, 720897, 13, 196630, 720897, 13, 262166, 720897, 13, 327702, 720897, 13, 393238, 720897, 13, 458774, 720897, 13, 524310, 720897, 13, 589846, 720897, 13, 655382, 720897, 13, 720918, 720897, 13, 786454, 720897, 13, 851990, 720897, 13, 917526, 720897, 13, 983062, 720897, 13, 1048598, 720897, 13, 1114134, 720897, 13, 1179670, 720897, 13, 1245206, 720897, 13, 1310742, 720897, 13, 1376278, 720897, 13, 1441814, 720897, 13, 1441815, 720897, 13, 1376279, 720897, 13, 1310743, 720897, 13, 1245207, 720897, 13, 1179671, 720897, 13, 1114135, 720897, 13, 1048599, 720897, 13, 983063, 720897, 13, 917527, 720897, 13, 851991, 720897, 13, 786455, 720897, 13, 720919, 720897, 13, 655383, 720897, 13, 589847, 720897, 13, 524311, 720897, 13, 458775, 720897, 13, 393239, 720897, 13, 327703, 720897, 13, 262167, 720897, 13, 196631, 720897, 13, 131095, 720897, 13, 65559, 720897, 13, 23, 720897, 13, -65513, 720897, 13, -131049, 720897, 13, -131048, 720897, 13, -65512, 720897, 13, 24, 720897, 13, 65560, 720897, 13, 131096, 720897, 13, 196632, 720897, 13, 262168, 720897, 13, 327704, 720897, 13, 393240, 720897, 13, 458776, 720897, 13, 524312, 720897, 13, 589848, 720897, 13, 655384, 720897, 13, 720920, 720897, 13, 786456, 720897, 13, 851992, 720897, 13, 917528, 720897, 13, 983064, 720897, 13, 1048600, 720897, 13, 1114136, 720897, 13, 1179672, 720897, 13, 1245208, 720897, 13, 1310744, 720897, 13, 1376280, 720897, 13, 1441816, 720897, 13, 1441817, 720897, 13, 1376281, 720897, 13, 1310745, 720897, 13, 1245209, 720897, 13, 1179673, 720897, 13, 1114137, 720897, 13, 1048601, 720897, 13, 983065, 720897, 13, 917529, 720897, 13, 851993, 720897, 13, 786457, 720897, 13, 720921, 720897, 13, 655385, 720897, 13, 589849, 720897, 13, 524313, 720897, 13, 458777, 720897, 13, 393241, 720897, 13, 327705, 720897, 13, 262169, 720897, 13, 196633, 720897, 13, 131097, 720897, 13, 65561, 720897, 13, 25, 720897, 13, -65511, 720897, 13, -131047, 720897, 13, -131046, 1, 0, -65510, 1, 0, 26, 1, 0, 65562, 1, 0, 131098, 1, 0, 196634, 1, 0, 262170, 1, 0, 327706, 1, 0, 393242, 1, 0, 458778, 1, 0, 524314, 1, 0, 589850, 1, 0, 655386, 1, 0, 720922, 1, 0, 786458, 1, 0, 851994, 1, 0, 917530, 1, 0, 983066, 1, 0, 1048602, 1, 0, 1114138, 1, 0, 1179674, 1, 0, 1245210, 1, 0, 1310746, 1, 0, 1376282, 1, 0, 1441818, 1, 0, 1441819, 1, 0, 1376283, 1, 0, 1310747, 1, 0, 1245211, 1, 0, 1179675, 1, 0, 1114139, 1, 0, 1048603, 1, 0, 983067, 1, 0, 917531, 1, 0, 851995, 1, 0, 786459, 1, 0, 720923, 1, 0, 655387, 1, 0, 589851, 1, 0, 524315, 1, 0, 458779, 1, 0, 393243, 1, 0, 327707, 1, 0, 262171, 1, 0, 196635, 1, 0, 131099, 1, 0, 65563, 1, 0, 27, 1, 0, -65509, 1, 0, -131045, 1, 0, -131044, 1, 0, -65508, 1, 0, 28, 1, 0, 65564, 1, 0, 131100, 1, 0, 196636, 1, 0, 262172, 1, 0, 327708, 1, 0, 393244, 1, 0, 458780, 1, 0, 524316, 1, 0, 589852, 1, 0, 655388, 1, 0, 720924, 1, 0, 786460, 1, 0, 851996, 1, 0, 917532, 1, 0, 983068, 1, 0, 1048604, 1, 0, 1114140, 1, 0, 1179676, 1, 0, 1245212, 1, 0, 1310748, 1, 0, 1376284, 1, 0, 1441820, 1, 0, 1441821, 1, 0, 1376285, 1, 0, 1310749, 1, 0, 1245213, 1, 0, 1179677, 1, 0, 1114141, 1, 0, 1048605, 1, 0, 983069, 1, 0, 917533, 1, 0, 851997, 1, 0, 786461, 1, 0, 720925, 1, 0, 655389, 1, 0, 589853, 1, 0, 524317, 1, 0, 458781, 1, 0, 393245, 1, 0, 327709, 1, 0, 262173, 1, 0, 196637, 1, 0, 131101, 1, 0, 65565, 1, 0, 29, 1, 0, -65507, 1, 0, -131043, 1, 0, -131042, 1, 0, -65506, 1, 0, 30, 1, 0, 65566, 1, 0, 131102, 1, 0, 196638, 1, 0, 262174, 1, 0, 327710, 1, 0, 393246, 1, 0, 458782, 1, 0, 524318, 1, 0, 589854, 1, 0, 655390, 1, 0, 720926, 1, 0, 786462, 1, 0, 851998, 1, 0, 917534, 1, 0, 983070, 1, 0, 1048606, 1, 0, 1114142, 1, 0, 1179678, 1, 0, 1245214, 1, 0, 1310750, 1, 0, 1376286, 1, 0, 1441822, 1, 0, 1441823, 1, 0, 1376287, 1, 0, 1310751, 1, 0, 1245215, 1, 0, 1179679, 1, 0, 1114143, 1, 0, 1048607, 1, 0, 983071, 1, 0, 917535, 1, 0, 851999, 1, 0, 786463, 1, 0, 720927, 1, 0, 655391, 1, 0, 589855, 1, 0, 524319, 1, 0, 458783, 1, 0, 393247, 1, 0, 327711, 1, 0, 262175, 1, 0, 196639, 1, 0, 131103, 1, 0, 65567, 1, 0, 31, 1, 0, -65505, 1, 0, -131041, 1, 0, -131040, 1, 0, -65504, 1, 0, 32, 1, 0, 65568, 1, 0, 131104, 1, 0, 196640, 1, 0, 262176, 1, 0, 327712, 1, 0, 393248, 1, 0, 458784, 1, 0, 524320, 1, 0, 589856, 1, 0, 655392, 1, 0, 720928, 1, 0, 786464, 1, 0, 852000, 1, 0, 917536, 1, 0, 983072, 1, 0, 1048608, 1, 0, 1114144, 1, 0, 1179680, 1, 0, 1245216, 1, 0, 1310752, 1, 0, 1376288, 1, 0, 1441824, 1, 0, 1441825, 1, 0, 1376289, 1, 0, 1310753, 1, 0, 1245217, 1, 0, 1179681, 1, 0, 1114145, 1, 0, 1048609, 1, 0, 983073, 1, 0, 917537, 1, 0, 852001, 1, 0, 786465, 1, 0, 720929, 1, 0, 655393, 1, 0, 589857, 1, 0, 524321, 1, 0, 458785, 1, 0, 393249, 1, 0, 327713, 1, 0, 262177, 1, 0, 196641, 1, 0, 131105, 1, 0, 65569, 1, 0, 33, 1, 0, -65503, 1, 0, -131039, 1, 0, -131038, 1, 0, -65502, 1, 0, 34, 1, 0, 65570, 1, 0, 131106, 1, 0, 196642, 1, 0, 262178, 1, 0, 327714, 1, 0, 393250, 1, 0, 458786, 1, 0, 524322, 1, 0, 589858, 1, 0, 655394, 1, 0, 720930, 1, 0, 786466, 1, 0, 852002, 1, 0, 917538, 1, 0, 983074, 1, 0, 1048610, 1, 0, 1114146, 1, 0, 1179682, 1, 0, 1245218, 1, 0, 1310754, 1, 0, 1376290, 1, 0, 1441826, 1, 0, 1441827, 1, 0, 1376291, 1, 0, 1310755, 1, 0, 1245219, 1, 0, 1179683, 1, 0, 1114147, 1, 0, 1048611, 1, 0, 983075, 1, 0, 917539, 1, 0, 852003, 1, 0, 786467, 1, 0, 720931, 1, 0, 655395, 1, 0, 589859, 1, 0, 524323, 1, 0, 458787, 1, 0, 393251, 1, 0, 327715, 1, 0, 262179, 1, 0, 196643, 1, 0, 131107, 1, 0, 65571, 1, 0, 35, 1, 0, -65501, 1, 0, -131037, 1, 0, -131036, 1, 0, -65500, 1, 0, 36, 1, 0, 65572, 1, 0, 131108, 1, 0, 196644, 1, 0, 262180, 1, 0, 327716, 1, 0, 393252, 1, 0, 458788, 1, 0, 524324, 1, 0, 589860, 1, 0, 655396, 1, 0, 720932, 1, 0, 786468, 1, 0, 852004, 1, 0, 917540, 1, 0, 983076, 1, 0, 1048612, 1, 0, 1114148, 1, 0, 1179684, 1, 0, 1245220, 1, 0, 1310756, 1, 0, 1376292, 1, 0, 1441828, 1, 0, 1441829, 1, 0, 1376293, 1, 0, 1310757, 1, 0, 1245221, 1, 0, 1179685, 1, 0, 1114149, 1, 0, 1048613, 1, 0, 983077, 1, 0, 917541, 1, 0, 852005, 1, 0, 786469, 1, 0, 720933, 1, 0, 655397, 1, 0, 589861, 1, 0, 524325, 1, 0, 458789, 1, 0, 393253, 1, 0, 327717, 1, 0, 262181, 1, 0, 196645, 1, 0, 131109, 1, 0, 65573, 1, 0, 37, 1, 0, -65499, 1, 0, -131035, 1, 0, -131034, 1, 0, -65498, 1, 0, 38, 1, 0, 65574, 1, 0, 131110, 1, 0, 196646, 1, 0, 262182, 1, 0, 327718, 1, 0, 393254, 1, 0, 458790, 1, 0, 524326, 1, 0, 589862, 1, 0, 655398, 1, 0, 720934, 1, 0, 786470, 1, 0, 852006, 1, 0, 917542, 1, 0, 983078, 1, 0, 1048614, 1, 0, 1114150, 1, 0, 1179686, 1, 0, 1245222, 1, 0, 1310758, 1, 0, 1376294, 1, 0)

[node name="Player" parent="." instance=ExtResource("2_wt15h")]
unique_name_in_owner = true
position = Vector2(446.333, 627)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(582, 328)

[node name="Spawner" type="Marker2D" parent="."]
position = Vector2(592, 0)
script = ExtResource("2_178tv")
Enemy = ExtResource("2_xic0p")

[node name="Timer" type="Timer" parent="Spawner"]
wait_time = 3.0
autostart = true

[node name="Spawner2" type="Marker2D" parent="."]
position = Vector2(592, 0)
script = ExtResource("2_178tv")
Enemy = ExtResource("2_xic0p")

[node name="Timer" type="Timer" parent="Spawner2"]
wait_time = 3.0
autostart = true

[node name="Spawner3" type="Marker2D" parent="."]
position = Vector2(592, 0)
script = ExtResource("2_178tv")
Enemy = ExtResource("2_xic0p")

[node name="Timer" type="Timer" parent="Spawner3"]
wait_time = 3.0
autostart = true

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
script = ExtResource("5_dd25g")
quest = ExtResource("6_cnepv")

[node name="Quest" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = -24.0
offset_right = 151.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "DETAILS"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Do" type="Label" parent="UI"]
offset_right = 296.0
offset_bottom = 30.0
text = "Enemies 00/00"
horizontal_alignment = 1

[node name="HP" type="Label" parent="UI"]
offset_left = 1.0
offset_top = 31.0
offset_right = 297.0
offset_bottom = 61.0
text = "LIVES 03/03"
horizontal_alignment = 1

[node name="GameOver" type="Label" parent="UI"]
visible = false
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.035
offset_left = 503.0
offset_top = 295.0
offset_right = 645.68
offset_bottom = 320.32
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="RETRY" type="Button" parent="UI/GameOver"]
layout_mode = 0
offset_left = 64.0
offset_top = 50.0
offset_right = 120.0
offset_bottom = 81.0
text = "RETRY"

[node name="EXIT" type="Button" parent="UI/GameOver"]
layout_mode = 0
offset_left = 64.0
offset_top = 95.0
offset_right = 120.0
offset_bottom = 126.0
text = "EXIT"

[node name="Complete" type="Label" parent="UI"]
visible = false
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.035
offset_left = 485.0
offset_top = 257.0
offset_right = 627.68
offset_bottom = 282.32
theme_override_font_sizes/font_size = 32
text = "YOU WIN"
horizontal_alignment = 1

[node name="RETRY" type="Button" parent="UI/Complete"]
layout_mode = 0
offset_left = 63.0
offset_top = 105.0
offset_right = 119.0
offset_bottom = 136.0
text = "RETRY"

[node name="EXIT" type="Button" parent="UI/Complete"]
layout_mode = 0
offset_left = 63.0
offset_top = 150.0
offset_right = 119.0
offset_bottom = 181.0
text = "EXIT"

[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_timer_timeout"]
[connection signal="timeout" from="Spawner2/Timer" to="Spawner2" method="_on_timer_timeout"]
[connection signal="timeout" from="Spawner3/Timer" to="Spawner3" method="_on_timer_timeout"]
[connection signal="pressed" from="UI/GameOver/RETRY" to="UI" method="_on_retry_pressed"]
[connection signal="pressed" from="UI/GameOver/EXIT" to="UI" method="_on_exit_pressed"]
[connection signal="pressed" from="UI/Complete/RETRY" to="UI" method="_on_retry_pressed"]
[connection signal="pressed" from="UI/Complete/EXIT" to="UI" method="_on_exit_pressed"]
